cluster/apps/media/jellyfin/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: media
subsets:
- addresses:
  - ip: 192.168.0.107
  ports:
  - name: webui
    port: 8096
    protocol: TCP
