cluster/apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  ports:
  - name: webui
    port: 80
    protocol: TCP
    targetPort: 8096
  clusterIP: None
  type: ClusterIP
