cluster/apps/media/jellyfin/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  ports:
  - name: webui
    port: 80
    protocol: TCP
    targetPort: 8096
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: media
subsets:
- addresses:
  - ip: 192.168.0.107
  ports:
  - name: webui
    port: 8096
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: "weather-sunset"
    ingress.kubernetes.io/protocol: http
spec:
  tls:
  - hosts:
    - jelly.mark.cloud
    secretName: jellyfin-tls
  rules:
  - host: jelly.mark.cloud
    http:
      paths:
      - backend:
          serviceName: jellyfin
          servicePort: 80
        path: /
